Modified theatre overview page in Admin panel, this page is now in a new style

--- a/views/admin/theater-management.hbs
+++ b/views/admin/theater-management.hbs
@@ -34,7 +34,7 @@
                                 <td scope="row" class="serialNumber"></td>
                                 <td>{{this.ownerName}}</td>
                                 <td>{{this.theatreName}}</td>
-                                <td><a href="/admin/owner-details/{{this._id}}" class="btn btn-accent">View</a></td>
+                                <td><a href="/admin/theatre-overview/{{this._id}}" class="btn btn-accent">View</a></td>
                                 <td>
                                     <div class="row justify-content-center">
                                         <a href="/admin/edit-owner/{{this._id}}" class="btn btn-accent mr-md-2">Edit</a>
