--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -71,6 +71,7 @@
   {{else if theatre}}
   {{>theatre-header}}
   {{>theatre-sidebar}}
+  {{{body}}}
   {{else if theatreStyle}}
   {{else if adminStyle}}
   {{else}}
