--- a/views/partials/admin-footer.hbs
+++ b/views/partials/admin-footer.hbs
@@ -1,7 +1,7 @@
 <footer class="main-footer d-flex p-2 px-3 bg-white border-top">
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+            <a class="nav-link" href="/admin/profile">Profile</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" type="button" onclick="logout(event, '/admin/logout')">Logout</a>
