Added setActiveTab function to set active tab in admin sidebar

--- a/views/partials/admin-sidebar.hbs
+++ b/views/partials/admin-sidebar.hbs
@@ -27,31 +27,31 @@
     <div class="nav-wrapper">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/admin">
+                <a class="nav-link " href="/admin" id="dashboard-tab">
                     <i class="material-icons">vertical_split</i>
                     <span>Dashboard</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/admin/theater-management">
+                <a class="nav-link " href="/admin/theater-management" id="theatre-management-tab">
                     <i class="material-icons">home</i>
                     <span>Theatre Management</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/admin/users-management">
+                <a class="nav-link " href="/admin/users-management" id="users-management-tab">
                     <i class="material-icons">people</i>
                     <span>Users Management</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/admin/users-activity">
+                <a class="nav-link " href="/admin/users-activity" id="users-activity-tab">
                     <i class="material-icons">pie_chart</i>
                     <span>Users Activity Track</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="/admin/profile">
+                <a class="nav-link " href="/admin/profile" id="admin-profile-tab">
                     <i class="material-icons">person</i>
                     <span>Admin Profile</span>
                 </a>
