--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -1,3 +1,8 @@
+<script>
+    $(document).ready(() => {
+        setActiveTab('dashboard-tab');
+    });
+</script>
 <div class="main-content-container container-fluid px-4">
     <!-- Page Header -->
     <div class="page-header row no-gutters py-4">
