--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -1,30 +1,48 @@
-<section class="container" style="height: 100vh !important;">
+<div class="main-content-container container-fluid px-4" style="height: 100vh !important;">
+    <!-- Default Light Table -->
     <div class="row h-100 justify-content-center">
         <div class="col-md-4 my-auto">
-            <div class="card card_border border-primary-top p-4">
-                <h3 class="text-center text-uppercase text-primary font-weight-bold mb-5">Admin Login</h3>
-                <form action="/admin/login" method="POST">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control" name="email" placeholder="Type your Email ID" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" placeholder="Type your Password" name="password" id="exampleInputPassword1">
-                    </div>
-                    {{#if messages.error}}
-                    <div class="text-center pb-2">
-                        <p class="text-danger">{{messages.error}}</p>
-                    </div>
-                    {{/if}}
+            <div class="card card-small border-primary-top mb-4 p-3">
+                <div class="card-header border-bottom">
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary rounded-pill px-5">Submit</button>
+                        <h3 class="text-accent text-uppercase">Admin Login</h3>
                     </div>
-                    <div class="text-center pt-3">
-                        <a class="btn btn-danger text-white rounded-circle" title="Sign in with google" onClick="authPopup(event, '/admin/auth/google')"><i class="fa fa-google"></i></a>
-                    </div>
-                </form>
+                </div>
+                <div class="card-body p-0 py-3">
+                    <form action="/admin/login" method="POST">
+                        <div class="form-row">
+                            <div class="form-group col-12">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                            </div>
+                            <div class="form-group col-12">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password"
+                                    placeholder="Password">
+                            </div>
+                        </div>
+                        <div class="text-center w-100">
+                            <button type="submit" class="btn btn-accent w-25">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                                    class="bi bi-box-arrow-in-right font-weight-bolder mb-1" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z" />
+                                    <path fill-rule="evenodd"
+                                        d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+                                </svg>&nbsp;&nbsp; Login</button>
+                            <a type="button" title="Sign in with google"
+                                onClick="authPopup(event, '/admin/auth/google')" class="btn btn-accent w-25">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                                    class="bi bi-google text-white mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" />
+                                </svg>oogle
+                            </a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</section>
+    <!-- End Default Light Table -->
+</div>
