Modified admin login page

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -21,13 +21,11 @@
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   {{else if adminStyle}}
-  <link rel="stylesheet" href="/assets/css/shards-dashboards.1.1.0.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/login.css">
   {{else if theatre}}
   <link rel="stylesheet" href="/assets/css/theatre.css">
   {{else if theatreStyle}}
-  <link rel="stylesheet" href="/assets/css/shards-dashboards.1.1.0.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/css/login.css">
   {{else}}
   <link rel="stylesheet" href="/assets/css/neumorphism.css">
   <link rel="stylesheet" href="/assets/css/fontawesome.css">
