Added function to get total paid bookings to calculate paid orders and unpaid orders percentage to represent in the pie chart in adminpanel dashboard

--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -142,14 +142,12 @@
                 </div>
             </div>
         </div>
+        <!--datas for graph -->
+        <div id="totalOrders" hidden>{{totalOrders}}</div>
+        <div id="totalPaidOrders" hidden>{{totalPaidOrders}}</div>
         <div id="currentMonthBookings" hidden>{{currentMonthBookings}}</div>
         <div id="pastMonthBookings" hidden>{{pastMonthBookings}}</div>
+        <!--Emd datas for graph -->
         <!-- End Users By Device Stats -->
     </div>
 </div>
-<script>
-    const currentMonthBookings = document.getElementById('currentMonthBookings').innerHTML.split(',');
-    const pastMonthBookings = document.getElementById('pastMonthBookings').innerHTML.split(',');
-    bouData.datasets[0].data = currentMonthBookings;
-    bouData.datasets[1].data = pastMonthBookings;
-</script>
