--- a/views/admin/theatre-overview.hbs
+++ b/views/admin/theatre-overview.hbs
@@ -110,28 +110,6 @@
                     <h6 class="m-0">Booking</h6>
                 </div>
                 <div class="card-body pt-0">
-                    <div class="row border-bottom py-2 bg-light">
-                        <div class="col-12 col-sm-6">
-                            <div id="blog-overview-date-range"
-                                class="input-daterange input-group input-group-sm my-auto ml-auto mr-auto ml-sm-auto mr-sm-0"
-                                style="max-width: 350px;">
-                                <input type="text" class="input-sm form-control" name="start" placeholder="Start Date"
-                                    id="blog-overview-date-range-1">
-                                <input type="text" class="input-sm form-control" name="end" placeholder="End Date"
-                                    id="blog-overview-date-range-2">
-                                <span class="input-group-append">
-                                    <button class="btn btn-accent btn-sm"><i
-                                            class="material-icons">keyboard_arrow_right</i></button>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 d-flex mb-2 mb-sm-0">
-                            <button type="button"
-                                class="btn btn-sm btn-white ml-auto mr-auto ml-sm-auto mr-sm-0 mt-3 mt-sm-0">View
-                                Full Report
-                                &rarr;</button>
-                        </div>
-                    </div>
                     <canvas height="130" style="max-width: 100% !important;" class="blog-overview-users"></canvas>
                 </div>
             </div>
@@ -146,23 +124,14 @@
                 <div class="card-body d-flex py-0">
                     <canvas height="220" class="blog-users-by-device m-auto"></canvas>
                 </div>
-                <div class="card-footer border-top">
-                    <div class="row">
-                        <div class="col">
-                            <select class="custom-select custom-select-sm" style="max-width: 130px;">
-                                <option selected>Last Week</option>
-                                <option value="1">Today</option>
-                                <option value="2">Last Month</option>
-                                <option value="3">Last Year</option>
-                            </select>
-                        </div>
-                        <div class="col text-right view-report">
-                            <a href="#">Full report &rarr;</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
+        <!--datas for graph -->
+        <div id="totalOrders" hidden>{{totalBookings}}</div>
+        <div id="totalPaidOrders" hidden>{{paidBookings}}</div>
+        <div id="currentMonthBookings" hidden>{{currentMonthBookings}}</div>
+        <div id="pastMonthBookings" hidden>{{pastMonthBookings}}</div>
+        <!--Emd datas for graph -->
         <!-- End Users By Device Stats -->
     </div>
 </div>
