--- a/views/admin/theatre-overview.hbs
+++ b/views/admin/theatre-overview.hbs
@@ -135,3 +135,4 @@
         <!-- End Users By Device Stats -->
     </div>
 </div>
+<script src="/assets/js/app/app-blog-overview.1.1.0.js"></script>
