--- a/views/admin/users-activity.hbs
+++ b/views/admin/users-activity.hbs
@@ -40,10 +40,10 @@
                                 <td>{{this.email}}</td>
                                 <td>{{#parseDate this.joinDate}}{{/parseDate}}</td>
                                 {{#if this.orderDetails}}
-                                <td>{{#parseDate this.orderDetails.0.orderDate}}{{/parseDate}}</td>
+                                <td>{{this.orderDetails.0.orderDate}}</td>
                                 <td class="badge
-                                {{#IF this.orderDetails.0.status '==' " booked"}} badge-success {{else}} badge-danger
-                                    {{/IF}} text-uppercase px-3 w-100">{{this.orderDetails.0.status}}</td>
+                                {{#IF this.orderDetails.0.status '==' "booked"}} badge-success {{else}} badge-danger
+                                    {{/IF}} text-uppercase px-3 w-75">{{this.orderDetails.0.status}}</td>
                                 <td>Rs.{{this.orderDetails.0.totalAmount}}</td>
                                 {{else}}
                                 <td>Nothing yet !</td>
