--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -106,6 +106,7 @@
   <script>
     $(document).ready(function () {
       $('#data-table').DataTable();
+      $('#dataTable').DataTable();
       
       jQuery('body').addClass(localStorage.getItem("sidebarMenuClass"));
     });
