--- a/views/admin/users-activity.hbs
+++ b/views/admin/users-activity.hbs
@@ -43,11 +43,11 @@
                                 <td>{{this.orderDetails.0.orderDate}}</td>
                                 <td class="badge
                                 {{#IF this.orderDetails.0.status '==' "booked"}} badge-success {{else}} badge-danger
-                                    {{/IF}} text-uppercase px-3 w-75">{{this.orderDetails.0.status}}</td>
+                                    {{/IF}} text-uppercase px-3" style="width: 75% !important; max-width: 75% !important;">{{this.orderDetails.0.status}}</td>
                                 <td>Rs.{{this.orderDetails.0.totalAmount}}</td>
                                 {{else}}
                                 <td>Nothing yet !</td>
-                                <td class="badge badge-light text-uppercase w-100">...</td>
+                                <td class="badge badge-light text-uppercase" style="width: 75% !important; max-width: 75% !important;">...</td>
                                 <td>...</td>
                                 {{/if}}
                             </tr>
