--- a/views/theatre/add-shows.hbs
+++ b/views/theatre/add-shows.hbs
@@ -1,126 +1,118 @@
-<section>
-    <!-- main content start -->
-    <div class="main-content">
-
-        <!-- content -->
-        <div class="container-fluid content-top-gap">
-
-            <!-- breadcrumbs -->
-            <nav aria-label="breadcrumb" class="mb-4">
-                <ol class="breadcrumb my-breadcrumb">
-                    <li class="breadcrumb-item"><a href="/theatre">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Add Shows</li>
-                </ol>
-            </nav>
-            <!-- //breadcrumbs -->
-
-            <section class="pricing">
-                <div class="card card_border mb-5">
-                    <div class="cards__heading">
-                        <h3>Enter Show Details</h3>
+<div class="main-content-container container-fluid px-4">
+    <!-- Page Header -->
+    <div class="page-header row no-gutters py-4">
+        <div class="col-12 col-sm-4 text-center text-sm-left mb-0">
+            <span class="text-uppercase page-subtitle">Action</span>
+            <h3 class="page-title">Add Show</h3>
+        </div>
+    </div>
+    <!-- End Page Header -->
+    <!-- Default Light Table -->
+    <div class="row">
+        <div class="col">
+            <div class="card card-small mb-4 p-3">
+                <div class="card-header border-bottom">
+                    <div class="row">
+                        <h5 class="text-accent">Enter Show Details</h5>
                     </div>
-                    <div class="card-body">
-                        <div class="px-2 mb-4">
-                            <div class="row justify-content-center">
-                                <div class="col-md-8">
-                                    <form action="/theatre/add-shows" method="POST">
-                                        <div class="form-group row" hidden>
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="screenId">Screen</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="screenId" value="{{screenId}}"
-                                                    class="form-control" required id="screenId">
-                                            </div>
+                </div>
+                <div class="card-body">
+                    <div class="px-2 mb-4">
+                        <div class="row justify-content-center">
+                            <div class="col-md-8">
+                                <form action="/theatre/add-shows" method="POST">
+                                    <div class="form-group row" hidden>
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="screenId">Screen</label>
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="movie">Select Movie</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <select class="form-control" id="movie" name="movie" required>
-                                                    <option hidden></option>
-                                                    {{#each movies}}
-                                                    <option value="{{this._id}}">{{this.movieTitle}}</option>
-                                                    {{/each}}
-                                                </select>
-                                            </div>
+                                        <div class="col-md-9">
+                                            <input type="text" name="screenId" value="{{screenId}}" class="form-control"
+                                                required id="screenId">
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="date">Date</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="date" name="date" class="form-control" required
-                                                    id="showDate" onkeydown="return false" onchange="getTimeSlots()">
-                                            </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="movie">Select Movie</label>
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="showTime">Show Time</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <select class="form-control" id="showTime" name="showTime"
-                                                    required></select>
-                                            </div>
+                                        <div class="col-md-9">
+                                            <select class="form-control" id="movie" name="movie" required>
+                                                <option hidden></option>
+                                                {{#each movies}}
+                                                <option value="{{this._id}}">{{this.movieTitle}}</option>
+                                                {{/each}}
+                                            </select>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-3"></div>
-                                            <div class="col-md-9 my-4 text-center">
-                                                <h5 class="text-secondary text-uppercase font-weight-bold">Class Rates
-                                                </h5>
-                                            </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="date">Date</label>
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="vip">VIP</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="vip" class="form-control" required id="vip">
-                                            </div>
+                                        <div class="col-md-9">
+                                            <input type="date" name="date" class="form-control" required id="showDate"
+                                                onkeydown="return false" onchange="getTimeSlots()">
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="premium">Premium</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="premium" class="form-control" required
-                                                    id="premium">
-                                            </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="showTime">Show Time</label>
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="executive">Executive</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="executive" class="form-control" required
-                                                    id="executive">
-                                            </div>
+                                        <div class="col-md-9">
+                                            <select class="form-control" id="showTime" name="showTime"
+                                                required></select>
                                         </div>
-                                        <div class="form-group row">
-                                            <div class="col-md-3 text-md-right">
-                                                <label for="normal">Normal</label>
-                                            </div>
-                                            <div class="col-md-9">
-                                                <input type="text" name="normal" class="form-control" required
-                                                    id="normal">
-                                            </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-3"></div>
+                                        <div class="col-md-9 my-4 text-center">
+                                            <h5 class="text-accent text-uppercase font-weight-bold">Class Rates
+                                            </h5>
                                         </div>
-                                        <button type="submit"
-                                            class="btn btn-success float-right rounded-pill px-5">Submit</button>
-                                        <a href="/theatre/view-schedule/{{screenId}}" type="submit"
-                                            class="btn btn-danger float-right rounded-pill px-5 mr-3">Cancel</a>
-                                    </form>
-                                </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="vip">VIP</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" name="vip" class="form-control" required id="vip">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="premium">Premium</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" name="premium" class="form-control" required
+                                                id="premium">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="executive">Executive</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" name="executive" class="form-control" required
+                                                id="executive">
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <div class="col-md-3 text-md-right">
+                                            <label for="normal">Normal</label>
+                                        </div>
+                                        <div class="col-md-9">
+                                            <input type="text" name="normal" class="form-control" required id="normal">
+                                        </div>
+                                    </div>
+                                    <div class="text-right">
+                                        <a href="/theatre/view-schedule/{{screenId}}" class="btn btn-danger w-25">Cancel</a>
+                                        <button type="submit" class="btn btn-accent w-25">Add</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-
+            </div>
         </div>
-        <!-- //content -->
-
     </div>
-    <!-- main content end-->
-</section>
+    <!-- End Default Light Table -->
+</div>
