Added: Owner Profile

--- a/views/partials/theatre-header.hbs
+++ b/views/partials/theatre-header.hbs
@@ -54,7 +54,7 @@
         <a class="nav-link dropdown-toggle text-nowrap px-3" data-toggle="dropdown" href="#" role="button"
           aria-haspopup="true" aria-expanded="false">
           <img class="user-avatar rounded-circle mr-2" src="{{#if theatre.ownerPic}}/images/theatre/{{theatre._id}}.jpg{{else}}/images/theatre/theatre-logo.png{{/if}}" alt="User Avatar">
-          <span class="d-none d-md-inline-block" id="adminHeaderName">{{admin.name}}</span>
+          <span class="d-none d-md-inline-block" id="theatreHeaderName">{{theatre.ownerName}}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-small">
           <a class="dropdown-item" href="/theatre/profile">
