Modified setActiveTab function to set active tab in theatre sidebar

--- a/views/partials/theatre-sidebar.hbs
+++ b/views/partials/theatre-sidebar.hbs
@@ -27,7 +27,7 @@
     <div class="nav-wrapper">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link " href="/admin" id="dashboard-tab">
+                <a class="nav-link " href="/theatre" id="dashboard-tab">
                     <i class="material-icons">vertical_split</i>
                     <span>Dashboard</span>
                 </a>
