--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,176 +1,16 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="MovieMaster | Built for comfortability | Enjoy the show" />
-
-  <link rel="icon" type="image/png" href="/favicon.ico" />
-  <link rel="manifest" href="/manifest.json" />
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-  <!-- Template CSS -->
-  {{#if admin}}
-  <link rel="stylesheet" href="/assets/css/shards-dashboards.1.1.0.min.css">
-  <link rel="stylesheet" href="/assets/css/extras.1.1.0.min.css">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  {{else if adminStyle}}
-  <link rel="stylesheet" href="/assets/css/login.css">
-  {{else if theatre}}
-  <link rel="stylesheet" href="/assets/css/shards-dashboards.1.1.0.min.css">
-  <link rel="stylesheet" href="/assets/css/extras.1.1.0.min.css">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  {{else if theatreStyle}}
-  <link rel="stylesheet" href="/assets/css/login.css">
-  {{else}}
-  <link rel="stylesheet" href="/assets/css/neumorphism.css">
-  <link rel="stylesheet" href="/assets/css/fontawesome.css">
-  {{/if}}
-
-  <link href="//fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/assets/css/datatables.min.css" />
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <link rel="stylesheet" href="/assets/css/vex.css">
-  <link rel="stylesheet" href="/assets/css/vex-theme-os.css">
-  <link rel="stylesheet" href="/assets/css/iziToast.css">
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
-  <link rel="stylesheet"
-    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css"
-    type="text/css" />
-  <link rel="stylesheet"
-    href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
-    type="text/css" />
-
-
-  <script src="/assets/js/jquery-1.10.2.min.js"></script>
-  <script src="/assets/js/iziToast.js"></script>
-  <script src="/assets/js/vex.combined.js"></script>
-  <script>
-    vex.defaultOptions.className = 'vex-theme-os';
-  </script>
-
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
-  <script
-    src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
-  <script
-    src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
-  <script src="/javascripts/mapbox.js"></script>
-</head>
-
-<title>{{title}}</title>
-</head>
-
-<body>
-  <div class="se-pre-con"></div>
-  {{#if admin}}
-  {{>admin-layout}}
-  {{else if theatre}}
-  {{>theatre-layout}}
-  {{else if theatreStyle}}
-  {{{body}}}
-  {{else if adminStyle}}
-  {{{body}}}
-  {{else}}
-  {{>user-header}}
-  {{{body}}}
-  {{/if}}
-  {{#if errMessage}}
-  {{>error-alert}}
-  {{else if messages.error}}
-  {{>error-alert}}
-  {{/if}}
-  {{#if alertMessage}}
-  {{>success-alert}}
-  {{else if messages.info}}
-  {{>success-alert}}
-  {{/if}}
-
-  {{#if admin}}
-  {{else if theatre}}
-  {{else if theatreStyle}}
-  {{else if adminStyle}}
-  {{else}}
-  {{>footer}}
-  {{/if}}
-
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
-  <script type="text/javascript"
-    src="/assets/js/datatables.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('#data-table').DataTable();
-      $('#dataTable').DataTable();
-      
-      jQuery('body').addClass(localStorage.getItem("sidebarMenuClass"));
-    });
-  </script>
-
-  <script src="/assets/js/jquery.counterup.min.js"></script>
-  <script src="/assets/js/jquery.countdown.min.js"></script>
-  <script src="/assets/js/popper.min.js"></script>
-  <script src="/assets/js/jquery.magnific-popup.min.js"></script>
-  <script src="/assets/js/owl.carousel.js"></script>
-  <script src="/assets/js/owl.config.js"></script>
-  <script src="/assets/js/neumorphism.js"></script>
-  <script src="/assets/js/jquery.nicescroll.js"></script>
-  <script src="/assets/js/scripts.js"></script>
-
-  <!-- close script -->
-  <script>
-    var closebtns = document.getElementsByClassName("close-grid");
-    var i;
-
-    for (i = 0; i < closebtns.length; i++) {
-      closebtns[i].addEventListener("click", function () {
-        this.parentElement.style.display = 'none';
-      });
-    }
-  </script>
-  <!-- //close script -->
-
-  <!-- loading-gif Js -->
-  <script src="/assets/js/modernizr.js"></script>
-  <script>
-    $(window).load(function () {
-      // Animate loader off screen
-      $(".se-pre-con").fadeOut("slow");
-    });
-  </script>
-  <!--// loading-gif Js -->
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="/assets/js/bootstrap.min.js"></script>
-
-  <script src="assets/js/easyResponsiveTabs.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function () {
-      //Horizontal Tab
-      $('#parentHorizontalTab').easyResponsiveTabs({
-        type: 'default', //Types: default, vertical, accordion
-        width: 'auto', //auto or any width like 600px
-        fit: true, // 100% fit in a container
-        tabidentify: 'hor_1', // The tab groups identifier
-        activate: function (event) { // Callback function if tab is switched
-          var $tab = $(this);
-          var $info = $('#nested-tabInfo');
-          var $name = $('span', $info);
-          $name.text($tab.text());
-          $info.show();
-        }
-      });
-    });
-  </script>
-
-  <script src="/javascripts/script.js"></script>
-  <script src="/javascripts/ajax.js"></script>
-</body>
-
-</html>
+{{#if admin}}
+{{>admin-layout}}
+{{else if theatre}}
+{{>theatre-layout}}
+{{else if theatreStyle}}
+{{>login-layout}}
+{{else if adminStyle}}
+{{>login-layout}}
+{{else}}
+{{>user-layout}}
+{{/if}}
+{{#if messages.info}}
+{{>success-alert}}
+{{else if messages.error}}
+{{>error-alert}}
+{{/if}}
