--- a/views/partials/theatre-layout.hbs
+++ b/views/partials/theatre-layout.hbs
@@ -1,19 +1,72 @@
-<div class="container-fluid">
-    <div class="row">
-        <!-- Main Sidebar -->
-        {{>theatre-sidebar}}
-        <!-- End Main Sidebar -->
-        <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
-            {{>theatre-header}}
-            {{{body}}}
-            <!-- / .main-navbar -->
-            {{>theatre-footer}}
-        </main>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="MovieMaster | Built for comfortability | Enjoy the show" />
+
+    <title>{{title}}</title>
+
+    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/shards-dashboards.1.1.0.min.css">
+    <link rel="stylesheet" href="/assets/css/extras.1.1.0.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/assets/css/datatables.min.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/assets/css/vex.css">
+    <link rel="stylesheet" href="/assets/css/vex-theme-os.css">
+    <link rel="stylesheet" href="/assets/css/iziToast.css">
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet"
+        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.css"
+        type="text/css" />
+
+    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/iziToast.js"></script>
+    <script src="/assets/js/vex.combined.js"></script>
+    <script>
+        vex.defaultOptions.className = 'vex-theme-os';
+    </script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js">
+    </script>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Main Sidebar -->
+            {{>theatre-sidebar}}
+            <!-- End Main Sidebar -->
+            <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
+                {{>theatre-header}}
+                {{{body}}}
+                <!-- / .main-navbar -->
+                {{>theatre-footer}}
+            </main>
+        </div>
     </div>
-</div>
-{{>developer}}
-<script src="/assets/js/Chart.min.js"></script>
-<script src="/assets/js/jquery.sharrre.min.js"></script>
-<script src="/assets/js/extras.1.1.0.min.js"></script>
-<script src="/assets/js/shards.min.js"></script>
-<script src="/assets/js/shards-dashboards.1.1.0.min.js"></script>
+    {{>developer}}
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/Chart.min.js"></script>
+    <script src="/assets/js/jquery.sharrre.min.js"></script>
+    <script src="/assets/js/extras.1.1.0.min.js"></script>
+    <script src="/assets/js/shards.min.js"></script>
+    <script src="/assets/js/shards-dashboards.1.1.0.min.js"></script>
+    <script type="text/javascript" src="/assets/js/datatables.min.js"></script>
+    <script src="/javascripts/script.js"></script>
+    <script src="/javascripts/ajax.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#dataTable').DataTable();
+        });
+    </script>
+</body>
+
+</html>
