Removed unwanted files and fixed some bugs

--- a/views/partials/user-footer.hbs
+++ b/views/partials/user-footer.hbs
@@ -41,7 +41,7 @@
                 <div class="copyright-footer">
                     <div class="columns text-lg-left">
                         <p>&copy; 2021 MovieMaster. All rights reserved | Developed by <a class="shadow-none"
-                                href="/">Vishnu C Prasad</a></p>
+                                href="https://vishnucprasad.github.io">Vishnu C Prasad</a></p>
                     </div>
 
                     <ul class="social text-lg-right">
