--- a/views/partials/user-layout.hbs
+++ b/views/partials/user-layout.hbs
@@ -28,6 +28,9 @@
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="/assets/js/iziToast.js"></script>
     <script src="/assets/js/vex.combined.js"></script>
+    <script>
+        vex.defaultOptions.className = 'vex-theme-os';
+    </script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
     <script
         src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.5.1/mapbox-gl-geocoder.min.js"></script>
